17-ARM_Interfacing/00-WorkSpace/.metadata/.plugins/org.eclipse.cdt.ui/08-USART.build.log
01:33:14 **** Incremental Build of configuration Debug for project 08-USART ****
make all 
Building file: ../src/USART_Config.c
Invoking: GNU Arm Cross C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DTRACE -DOS_USE_TRACE_SEMIHOSTING_DEBUG -DSTM32F401xC -DUSE_HAL_DRIVER -DHSE_VALUE=25000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f4-hal" -std=gnu11 -MMD -MP -MF"src/USART_Config.d" -MT"src/USART_Config.o" -c -o "src/USART_Config.o" "../src/USART_Config.c"
Finished building: ../src/USART_Config.c
 
Building file: ../src/main.c
Invoking: GNU Arm Cross C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DTRACE -DOS_USE_TRACE_SEMIHOSTING_DEBUG -DSTM32F401xC -DUSE_HAL_DRIVER -DHSE_VALUE=25000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f4-hal" -std=gnu11 -MMD -MP -MF"src/main.d" -MT"src/main.o" -c -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:42:2: error: too few arguments to function 'USART_enuInit'
  USART_enuInit();
  ^
In file included from ../src/main.c:6:0:
../src/USART_Interface.h:665:23: note: declared here
 USART_tenuErrorStatus USART_enuInit(USART_tstrConfig_t * USART_Config);
                       ^
../src/main.c:44:2: warning: implicit declaration of function 'Sched_enuInit' [-Wimplicit-function-declaration]
  Sched_enuInit();
  ^
../src/main.c:45:2: warning: implicit declaration of function 'Sched_enuStart' [-Wimplicit-function-declaration]
  Sched_enuStart();
  ^
make: *** [src/subdir.mk:53: src/main.o] Error 1

01:33:16 Build Finished (took 1s.591ms)

